Created the copyright block and removed unnecessary modules

--- a/config/sync/language/en/metatag.metatag_defaults.front.yml
+++ b/config/sync/language/en/metatag.metatag_defaults.front.yml
@@ -1,3 +1,5 @@
-label: 'Front page'
 tags:
   title: 'Welcome! | [site:name]'
+  canonical_url: '[site:url]'
+  shortlink: '[site:url]'
+label: 'Front page'
